# Memeland-airdrop-staking

./: .env.prod  .env.testnet  .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
data/: allowlist-example-merkle.json  allowlist-example.csv  devnet-airdrop-merkle.json  devnet-airdrop.csv  prod-airdrop.csv  stakeland-fight-result.csv
programs/memeland_airdrop/: Cargo.toml
programs/memeland_airdrop/src/: lib.rs  new_lib.rs
reports/: claude-post-audit-report.md  generate_chart.py  generate_table.py  new-lib-changes.md  patch-review-report.md  plainshift-audit-remediation.md  reward-formulas-comparison.md  stats-2026-02-17T22-25-02.txt  stats-2026-02-17T22-38-10.txt  stats-2026-02-17T22-44-03.txt  stats-2026-02-18T14-31-00.txt  stats-2026-02-18T17-59-05.txt  stats-2026-02-19T19-40-05.txt  stats-2026-02-19T19-46-47.txt  stats-2026-02-19T19-56-52.txt
scripts/: build-merkle-tree.ts  calculate-rewards.ts  claim.ts  create_token.sh  deploy_anchor.sh  generate-keypairs.ts  initialize-pool.ts  pause.ts  scale-csv.ts  snapshot.ts  stats.ts  unstake-preview.ts  validate-allowlist.ts
scripts/utils/: rewards.ts
tests/: memeland_airdrop.ts  memeland_bankrun_optimized.ts
