[package]
name = "memeland_airdrop"
version = "0.1.0"
description = "Memeland Airdrop & 60-Day Exponential Staking Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memeland_airdrop"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
bytemuck = { version = "1.14", features = ["derive"] }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
  'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
]
